<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitle"
            android:hint="@string/hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etDesc"
            android:hint="@string/hint_description"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDate"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_date"/>

            <Button
                android:id="@+id/btnPickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgStatus"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Todo"/>

            <RadioButton
                android:id="@+id/rbProgress"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Progress"/>

            <RadioButton
                android:id="@+id/rbComplete"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete"/>
        </RadioGroup>

    </LinearLayout>
</ScrollView>
